started to work on content

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,12 @@
   "rules": {
     "indent": [
       "error",
-      4
+      2,
+      {
+        "ignoredNodes": [
+          "JSXElement"
+        ]
+      }
     ],
     "linebreak-style": [
       "error",
