--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hosts-extension",
+  "name": "react-redux-ext-kit",
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
@@ -37,7 +37,8 @@
     "redux-persist": "^5.10.0",
     "redux-saga": "^0.16.0",
     "webpack": "^4.11.1",
-    "webpack-bundle-analyzer": "^2.11.1"
+    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-chrome-extension-reloader": "^0.8.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
