--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.3.0",
     "webpack": "^4.11.1",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-chrome-extension-reloader": "^0.8.3"
